--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "django-markdown>=0.8.4",
     "django>=5.1.4",
+    "markdown>=3.7",
 ]
